2012-02-08 02:20-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLDocument.m: Return YES if the self and other
	object are the same object in isEqual:.
	* Source/NSXMLElement.m: Fix issue in attributeForName: method.
	* Source/NSXMLNode.m: Reinstate dougs change.

2012-02-07 23:42-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Revert doug's last change.  The call
	to xmlFreeDoc(..) crashes during testing.  I believe that
	xmlFreeNode(..) is sufficient.

2012-02-07 Doug Simons <doug.simons@testplant.com>

	* Source/win32/GSFileHandle.m: Fix some problems with the way socket
	fileDescriptors are treated.

2012-02-07 Doug Simons <doug.simons@testplant.com>

    * Source/NSXMLNode.m: Changed dealloc to call xmlFreeNode() or
    xmlFreeDoc() depending on the type of node.

2012-02-07 13:12-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Correct issue with crash on
	Windows.   Seems that calling xmlFree(..) on a xmlNode
	causes a crash. Call xmlFreeNode in dealloc instead.

2012-02-04 09:23-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLDocument.m: add implementation of isEqual:
	* Tests/base/NSXMLDocument/basic.m: add document equivalency test.

2012-02-04 08:08-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: minor fix in nodesForXPath:... don't
	set error to NULL if it doesn't point to anything.
	* Tests/base/NSXMLDocument/basic.m: Improved tests.

2012-02-03 11:43-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Conditionally compile out code if
	the supporting library is not available.

2012-02-03 09:15-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Tests/base/NSXMLNode/basic.m: Correct test for
	text node.

2012-02-02 22:57-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLDocument.m: Remove commented out code
	from old implementation.